--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vue 3 Web Components Example</title>
   </head>
   <body>
-    <div id="app"></div>
+    <counter-element msg="Sample" />
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
