:sparkles: 配信する Vue Components のパターンを増やす

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Vue 3 Web Components Example</title>
   </head>
   <body>
-    <counter-element msg="Sample" />
+    <sample-element></sample-element>
+    <counter-element msg="Sample"></counter-element>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
